--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,6 @@ numpy==1.24.3
 matplotlib==3.7.2
 seaborn==0.12.2
 scikit-learn==1.3.0
-xgboost==1.7.6
-shap==0.43.0
-fastapi==0.103.1
-uvicorn==0.23.2
-python-multipart==0.0.6
 streamlit==1.26.0
 plotly==5.16.1
 transformers==4.33.2
@@ -15,4 +10,8 @@ torch==2.0.1
 spacy==3.6.1
 requests==2.31.0
 openpyxl==3.1.2
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+python-multipart==0.0.6
+fpdf==1.7.2
+python-pptx==0.6.21
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl 
