--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=65.5.0
+wheel>=0.38.0
 pandas==2.0.3
 numpy==1.24.3
 matplotlib==3.7.2
@@ -6,7 +8,7 @@ scikit-learn==1.3.0
 streamlit==1.26.0
 plotly==5.16.1
 transformers==4.33.2
-torch==2.0.1
+torch==1.13.1
 spacy==3.6.1
 requests==2.31.0
 openpyxl==3.1.2
@@ -14,4 +16,4 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 fpdf==1.7.2
 python-pptx==0.6.21
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl 
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl 
