--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ seaborn==0.12.2
 scikit-learn==1.3.0
 streamlit==1.26.0
 plotly==5.16.1
-transformers==4.33.2
-torch==1.13.1
+transformers>=4.51.3
+torch>=2.0
 spacy==3.6.1
 requests==2.31.0
 openpyxl==3.1.2
